--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "predeploy": "vite build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d dist --repo https://github.com/risaruno/cissprayertime.git",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
